--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 body {
-  overflow-x: hidden;
   margin: 0;
   font-family: Arial, sans-serif;
   color: #ffffff;
   text-align: center;
   font-size: 16px;
+  overflow-x: hidden;
 }
 
 #background {
@@ -79,6 +79,7 @@ a {
   padding: 10px;
   outline: none;
   border-radius: 50%;
+  -webkit-transition: .5s ease-in-out;
   transition: .5s ease-in-out;
   background-color: transparent;
   box-shadow: inset rgb(20 158 199) 0 0 11px 1px;
@@ -121,7 +122,8 @@ a {
 
 .input:focus {
   width: 130px;
-  transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+  -webkit-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
   box-shadow: 0 6px 8px rgb(18 168 212);
   border-radius: 25px;
   padding-left: 20px;
@@ -131,19 +133,11 @@ a {
   cursor: auto;
 }
 
-
 .tour-cards {
   display: grid;
   gap: 60px;
   justify-items: center;
 }
-
-
-
-
-
-
-
 
 
 
@@ -583,9 +577,6 @@ li:after {
 }
 
 .card:nth-child(9) .upper-part-face img  {
-  /* transform: rotate(20deg);
-  position: absolute;
-  top: -55px; */
   width: 130% !important;
   box-shadow: none !important;
   border-radius: 0 !important;
@@ -1097,7 +1088,7 @@ footer {
   }
   .input, .icon-input, .icon-user {
     right: 0;
-    transition: all 0.3s;
+    transition: all .5s ease-in-out;
   }
   
   .input-wrapper, .user-wrapper {
